# web3-wallet

./: .gitignore  Agent.md  ChangeLog.md  README.md  build_apk  buildprogtess.md  fix_addresses.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
docs/: tauri-vue-wallet-design.md
scripts/: check-android-build-env.sh  generate-android-keystore.sh  install-android-build-env.sh  sign-android-apk.sh  sync-android-system-bars.sh
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  wallet.rs
src/components/: ReceiveQrCard.vue  SectionCard.vue  WalletChrome.vue
src/pages/: HomePage.vue  WelcomePage.vue
src/pages/__tests__/: accounts-page.spec.ts  activity-page.spec.ts  add-token-page.spec.ts  send-page.spec.ts  transaction-detail-page.spec.ts  wallet-home-page.spec.ts
src/pages/onboarding/: BackupPhrasePage.vue  CreateWalletPage.vue  ImportWalletPage.vue  UnlockWalletPage.vue
src/pages/settings/: AccountsPage.vue  AddressBookPage.vue  NetworksPage.vue  SettingsPage.vue
src/pages/wallet/: ActivityPage.vue  AddTokenPage.vue  ReceivePage.vue  SendPage.vue  TokenDetailPage.vue  TransactionDetailPage.vue  WalletHomePage.vue
src/router/: index.ts
src/router/__tests__/: index.spec.ts
src/services/: evm.ts  mobileViewport.ts  system.ts  uiState.ts  walletBridge.ts
src/services/__tests__/: evm.runtime.spec.ts  (+5 more)
src/stores/: app.ts  index.ts  networks.ts  onboarding.ts  portfolio.ts  session.ts  wallet.ts
src/styles/: main.css
src/types/: app.ts  network.ts  portfolio.ts  wallet.ts
src/utils/: format.ts  receive.ts  runtimeSafety.ts  security.ts  tokenSafety.ts  wallet.ts
tests/e2e/: helpers.ts  home.spec.ts  wallet-flows.spec.ts
(+9 files in other folders)
